<resources>

    <string name="app_name">Music Sight Reading</string>
    <string name="menu_settings">Settings</string>
    <string name="version">Vesrion 1.0.1</string>
    <string name="slogan">Read music sheets faster!</string>
    <string name="practice_button">Practice</string>
    <string name="quiz_button">Quiz</string>
    <string name="stats_button">Statistics</string>
    <string name="options_button">Options</string>
    <string name="clefs">Clefs</string>
    <string name="treble">Treble</string>
    <string name="bass">Bass</string>
    <string name="tenor">Tenor</string>
    <string name="alto">Alto</string>
    <string name="practice">Practice</string>
    <string name="enable_random">Randomize</string>
    <string name="enable_show_correct">Show correct answers when wrong</string>
    <string name="save_options">Save</string>
    <string name="cancel_options">Cancel</string>
    <string name="wrong_attempts">Wrong Attempts</string>
    <string name="total_time">Total Time</string>
    <string name="quiz_limit">Number of notes</string>
    <string name="quiz">Quiz</string>

    <string-array name="note_names_english">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
    </string-array>
    <string-array name="note_names_italian">
        <item>La</item>
        <item>Si</item>
        <item>Do</item>
        <item>Re</item>
        <item>Mi</item>
        <item>Fa</item>
        <item>Sol</item>
    </string-array>

    <string name="note_naming_style">Note naming style</string>
    <string name="note_naming_english">English (C,D,E,F,G,A,B)</string>
    <string name="note_naming_italian">Italian (Do,Re,Mi,Fa,Sol,La,Si)</string>
    <string name="difficulty_level">Difficulty level</string>

</resources>