<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/app_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10.0dip"
        android:text="@string/app_name"
        android:textSize="48.0sp" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="15.0dip"
        android:paddingBottom="15.0dip"
        android:text="@string/slogan"
        android:textSize="18.0sp"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="30dip" 
        android:paddingRight="30dip"
        android:weightSum="3.0" 
        android:gravity="center_horizontal|center_vertical" >

        <Button
            android:id="@+id/practice_button"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0"
            android:onClick="onPracticeClicked"
            android:text="@string/practice_button"
            android:textSize="24.0sp" />

        <Button
            android:id="@+id/quiz_button"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0"
            android:onClick="onQuizClicked"
            android:text="@string/quiz_button"
            android:textSize="24.0sp" />

        <Button
            android:id="@+id/stats_button"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0"
            android:onClick="onStatsClicked"
            android:text="@string/stats_button"
            android:textSize="24.0sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" 
        android:gravity="center_horizontal|center_vertical" >

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version" />

    </LinearLayout>
</LinearLayout>